--- a/views/index.html
+++ b/views/index.html
@@ -23,6 +23,9 @@
          </form>
       </div>
       <script src='/socket.io/socket.io.js' type='text/javascript'></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+         integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+         crossorigin="anonymous"></script>
       <script src='/javascripts/chat.js' type='text/javascript'></script>
       <script src='/javascripts/chat_ui.js' type='text/javascript'></script>
    </body>
